--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,19 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog (nur Features)</h2>
+				<h3>&Auml;nderungen bis 24.11.2018</h3>
+				<ul style="font-size:18px">
+				<li>Fehlende Kontaktadressen werden in Router-Liste hervorgehoben</li>
+				<li>gwinfo-Version wird angezeigt (Gateway-Seite und Gateway-Details auf Statistik-Seite)</a></li>
+				<li>URL f&uuml;r Karte enth&auml;lt nun die aktivierten Layer (ggf. Cache leeren)</li>
+				<li>"Reset!"-Warnung wird nun immer angezeigt, wenn keine Koordinaten gesetzt sind</li>
+				<li>Neue API /api/alfred2 ohne Angabe der alfred ID und bessere Status-R&uuml;ckmeldung</li>
+				<li>Standardausschnitt der Karte zeigt nun "ganzes" Freifunk Franken Gebiet</li>
+				<li>Support f&uuml;r Polygon-Hoods (z. Zt. noch nicht am KeyXchange verf&uuml;gbar)</li>
+				<li>Vertauschen der Links f&uuml;r Statistik-Daten und Router-Liste in der Liste der Gateways und der Hoods</li>
+				<li>Filtern der Router-Liste nach "os", "batman", "kernel" und "nodewatcher" m&ouml;glich</li>
+				<li>Link zu Router-Liste f&uuml;r diverse Router-Daten auf Detailseite verf&uuml;gbar</li>
+				</ul>
 				<h3>&Auml;nderungen bis 21.11.2018</h3>
 				<ul style="font-size:18px">
 				<li>Uplink-Router werden durch wei&szlig;e Punktmitte in Karte erkennbar</li>
