--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,6 +22,12 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog (nur Features)</h2>
+				<h3>&Auml;nderungen bis 14.12.2018</h3>
+				<ul style="font-size:18px">
+				<li>Verhindere Fake-Hoodwechsel</li>
+				<li>Rückbau der KeyXchangeV1 Unterstützung</li>
+				<li>Maskiere Public IPv6-Adressen</li>
+				</ul>
 				<h3>&Auml;nderungen bis 24.11.2018</h3>
 				<ul style="font-size:18px">
 				<li>Fehlende Kontaktadressen werden in Router-Liste hervorgehoben</li>
