--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -22,10 +22,16 @@
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/FreifunkFranken/fff-monitoring">hier</a>
 				heruntergeladen werden.</p>
 				<h2 style="margin-top:30px">Changelog (nur Features)</h2>
+				<h3>&Auml;nderungen bis 14.12.2018</h3>
+				<ul style="font-size:18px">
+				<li>Verhindere Fake-Hoodwechsel</li>
+				<li>Rückbau der KeyXchangeV1 Unterstützung</li>
+				<li>Maskiere Public IPv6-Adressen</li>
+				</ul>
 				<h3>&Auml;nderungen bis 24.11.2018</h3>
 				<ul style="font-size:18px">
 				<li>Fehlende Kontaktadressen werden in Router-Liste hervorgehoben</li>
-				<li>gwinfo-Version wird angezeigt (Gateway-Seite und Gateway-Details auf Statistik-Seite)</a></li>
+				<li>gwinfo-Version wird angezeigt (Gateway-Seite und Gateway-Details auf Statistik-Seite)</li>
 				<li>URL f&uuml;r Karte enth&auml;lt nun die aktivierten Layer (ggf. Cache leeren)</li>
 				<li>"Reset!"-Warnung wird nun immer angezeigt, wenn keine Koordinaten gesetzt sind</li>
 				<li>Neue API /api/alfred2 ohne Angabe der alfred ID und bessere Status-R&uuml;ckmeldung</li>
