router.html: Fix MAC addresses in neighbor graph
This adds a JavaScript function for integer to MAC address
conversion.

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -11,6 +11,7 @@
 	<script src="{{ url_for('static', filename='js/graph/jquery.flot.downsample.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/graph/jquery.flot.resize.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/graph/jquery.flot.hiddengraphs.js') }}"></script>
+	<script src="{{ url_for('static', filename='js/util.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/graph.js') }}"></script>
 	<style type="text/css">
 		#map {
