api/alfred: Fix processes to be optional
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/apidoc.html
+++ b/ffmap/web/templates/apidoc.html
@@ -172,7 +172,7 @@
       &lt;loadavg1&gt;1-minute load average {0.00}&lt;/loadavg1&gt;
       &lt;loadavg5&gt;5-minute load average [0.06]&lt;/loadavg5&gt;
       &lt;loadavg15&gt;15-minute load average {0.03}&lt;/loadavg15&gt;
-      &lt;processes&gt;Runnable processes/total processes (1/63)&lt;/processes&gt; # mandatory due to unfixed bug
+      &lt;processes&gt;Runnable processes/total processes [1/63]&lt;/processes&gt;
       &lt;uptime&gt;Uptime in seconds (410831.18)&lt;/uptime&gt; # Needs to increase, otherwise reboots will be logged
       &lt;idletime&gt;Idle time in seconds {389207.19}&lt;/idletime&gt;
       &lt;local_time&gt;Local router time as timestamp (1559214924)&lt;/local_time&gt; # Needs to increase, otherwise router won't be updated
