apidoc.html: Add babel_version to alfred example XML
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/apidoc.html
+++ b/ffmap/web/templates/apidoc.html
@@ -176,6 +176,7 @@
       &lt;uptime&gt;Uptime in seconds (410831.18)&lt;/uptime&gt; # Needs to increase, otherwise reboots will be logged
       &lt;idletime&gt;Idle time in seconds {389207.19}&lt;/idletime&gt;
       &lt;local_time&gt;Local router time as timestamp (1559214924)&lt;/local_time&gt; # Needs to increase, otherwise router won't be updated
+      &lt;babel_version&gt;babel version [babeld-1.9.1]&lt;/babel_version&gt;
       &lt;batman_advanced_version&gt;batman-adv version [openwrt-2018.1-6]&lt;/batman_advanced_version&gt;
       &lt;rt_protocol&gt;routing protocol [???]&lt;/rt_protocol&gt;
       &lt;kernel_version&gt;Linux kernel version [4.9.170]&lt;/kernel_version&gt;
