statistics.html: Use shorter keys for stats json
Like done recently for the router details page, also reduce the
amount of plain data by using short names for the keys in json
stats. While at it, also remove unused fields and improve the
formatting of the query.

This fixes the traffic graph on the statistics page, which was
broken due to the earlier change for the routers.

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -232,7 +232,7 @@
 		</div>
 	</div>
 	<script type="text/javascript">
-		var global_stats = {{ stats|statbson2json|safe }};
+		var global_stats = {{ stats|shortbson2json|safe }};
 		var router_firmwares = {{ router_firmwares|tojson }};
 		var router_models = {{ router_models|tojson }};
 		var routers_page_url = "{{ url_for('router_list') }}";
