treewide: add support for br-client
br-mesh has been renamed to br-client in recent firmware.

Implement br-client parallel to br-mesh.

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/apidoc.html
+++ b/ffmap/web/templates/apidoc.html
@@ -188,8 +188,8 @@
       &lt;vpn_active&gt;WAN-Uplink status, 0 or 1 [0]&lt;/vpn_active&gt;
     &lt;/system_data&gt;
     &lt;interface_data&gt; # List of interfaces with interface name as node name; one interface with mac address is required for identification of device
-      &lt;br-mesh&gt; # Example br-mesh device
-        &lt;name&gt;netif name [br-mesh]&lt;/name&gt;
+      &lt;br-client&gt; # Example br-client device
+        &lt;name&gt;netif name [br-client]&lt;/name&gt;
         &lt;mtu&gt;MTU [1500]&lt;/mtu&gt;
         &lt;mac_addr&gt;netif MAC address [aa:bb:cc:dd:ee:f1]&lt;/mac_addr&gt;
         &lt;ipv4_addr&gt;Device's IPv4 address in FFF network [10.83.999.1]&lt;/ipv4_addr&gt;
@@ -198,7 +198,7 @@
         &lt;ipv6_link_local_addr&gt;Device's link-local address [fe80::a8bb:ccff:fedd:eef1/64]&lt;/ipv6_link_local_addr&gt;
         &lt;traffic_rx&gt;Total RX traffic bytes [1033114334]&lt;/traffic_rx&gt;
         &lt;traffic_tx&gt;Total TX traffic bytes [30814227528]&lt;/traffic_tx&gt;
-      &lt;/br-mesh&gt;
+      &lt;/br-client&gt;
       &lt;eth0.1&gt; # Example VLAN device
         &lt;name&gt;netif name [eth0.1]&lt;/name&gt;
         &lt;mtu&gt;MTU [1500]&lt;/mtu&gt;
