--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -284,11 +284,11 @@
 					<div id="netstat" class="graph"></div>
 				</div>
 				<ul class="list-group" id="netif-list">
-				{# make sure that br-mesh is on top of the list #}
-				{%- for netif in router.netifs if netif.netif == 'br-mesh' %}
+				{# make sure that br-client is on top of the list #}
+				{%- for netif in router.netifs if netif.netif in ('br-client','br-mesh') %}
 					<li class="list-group-item active" data-name="{{ netif.netif|replace('.', '')|replace('$', '') }}">
 						<div class="row">
-							<div class="col-xs-7 col-sm-7"><h4 class="list-group-item-heading">br-mesh: <span class="netifdesc">Bridge</span></h4></div>
+							<div class="col-xs-7 col-sm-7"><h4 class="list-group-item-heading">{{ netif.netif }}: <span class="netifdesc">Client Bridge</span></h4></div>
 							<div class="col-xs-5 col-sm-5 text-right" style="text-transform: uppercase;"><h4 class="list-group-item-heading">{{ netif.mac|int2mac }}</h4></div>
 						</div>
 						<div class="row">
@@ -314,7 +314,7 @@
 						</div>
 					</li>
 				{%- endfor %}
-				{%- for netif in router.netifs if netif.netif != 'br-mesh' %}
+				{%- for netif in router.netifs if not netif.netif in ('br-client','br-mesh') %}
 					<li class="list-group-item" data-name="{{ netif.netif|replace('.', '')|replace('$', '') }}">
 						<div class="row">
 							<div class="col-xs-7 col-sm-7"><h4 class="list-group-item-heading" style="{%- if netif.color -%}color:{{ netif.color }}{%- endif -%}">{{ netif.netif }}{%- if netif.description -%}: <span class="netifdesc">{{ netif.description }}</span>{%- endif %}</h4></div>
@@ -468,7 +468,7 @@
 				load_netif_stats(netif);
 				$(this).addClass("active");
 			});
-			load_netif_stats("br-mesh");
+			load_netif_stats("br-client");
 		});
 		{%- if router.neighbours|length > 0 %}
 		function load_neigh_stats() {
