--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -285,7 +285,7 @@
 				</div>
 				<ul class="list-group" id="netif-list">
 				{# make sure that br-client is on top of the list #}
-				{%- for netif in router.netifs if netif.netif in ('br-client','br-mesh') %}
+				{%- for netif in router.netifs if netif.netif == 'br-client' %}
 					<li class="list-group-item active" data-name="{{ netif.netif|replace('.', '')|replace('$', '') }}">
 						<div class="row">
 							<div class="col-xs-7 col-sm-7"><h4 class="list-group-item-heading">{{ netif.netif }}: <span class="netifdesc">Client Bridge</span></h4></div>
@@ -314,7 +314,7 @@
 						</div>
 					</li>
 				{%- endfor %}
-				{%- for netif in router.netifs if not netif.netif in ('br-client','br-mesh') %}
+				{%- for netif in router.netifs if netif.netif != 'br-client' %}
 					<li class="list-group-item" data-name="{{ netif.netif|replace('.', '')|replace('$', '') }}">
 						<div class="row">
 							<div class="col-xs-7 col-sm-7"><h4 class="list-group-item-heading" style="{%- if netif.color -%}color:{{ netif.color }}{%- endif -%}">{{ netif.netif }}{%- if netif.description -%}: <span class="netifdesc">{{ netif.description }}</span>{%- endif %}</h4></div>
